--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header class="main-header text-center">
 		<span> </span>
 		<h1>Terapéutica de las Enfermedades Espirituales</h1>
-		<h2 class="pb-0">8-10 Septiembre 2017</h2>
+		<h2 class="pb-0">8-10 Septiembre 2018</h2>
 		<h3>Suchitlán, Colima</h3>
 	</header>
 	<div class="main-content text-center">
@@ -29,8 +29,8 @@
 			que señalan los Padres de la Iglesia apuntando a Cristo como el Médico.
 		</div>
 		<div class="subheader">
-			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
-				&middot avaricia &middot odio &middot tristeza &middot ansiedad
+			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot
+				rencor &middot lujuria &middot avaricia &middot odio &middot tristeza &middot ansiedad
 			</div>
 		</div>
 		<div class="container pb-0">
@@ -38,19 +38,20 @@
 				<div class="col-lg-4">
 					<a href="img\platica.jpg"><img class="circle mb-4" width="140" height="140" src="img\platica.jpg"></a>
 					<h3>Pláticas</h3>
-					<p class="text-left pt-3">Durante el fin de semana se tienen pláticas presentando los temas, representaciones, pequeñas obras de teatro y momentos
-						para compartir en pequeños grupos.</p>
+					<p class="text-left pt-3">Durante el fin de semana se tienen pláticas presentando los temas, representaciones, pequeñas
+						obras de teatro y momentos para compartir en pequeños grupos.</p>
 				</div>
 				<div class="col-lg-4">
 					<a href="img\oracion.jpg"><img class="circle mb-4" width="140" height="140" src="img\oracion.jpg"></a>
 					<h3>Oración común</h3>
-					<p class="text-left pt-3">El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la
-						cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
+					<p class="text-left pt-3">El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza
+						en torno al icono de la cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
 				</div>
 				<div class="col-lg-4">
 					<a href="img\eucaristia.jpg"><img class="circle mb-4" width="140" height="140" src="img\eucaristia.jpg"></a>
 					<h3>Eucaristía y Sacramentos </h3>
-					<p class="text-left pt-3">Es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. El domingo se celebra la Eucaristía.</p>
+					<p class="text-left pt-3">Es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. El domingo
+						se celebra la Eucaristía.</p>
 				</div>
 			</div>
 		</div>
@@ -130,8 +131,8 @@
 		<hr class="featurette">
 		<div class="container clearfix pt-2 pb-5 mb-4">
 			<div class="quote col-lg-8 pr-5 pull-right-lg-7">
-				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
-					las heridas que nos ha hecho el mundo"</p>
+				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué
+					sanar las heridas que nos ha hecho el mundo"</p>
 				<div class="quote-by">
 					<p>- San Juan Crisóstomo</p>
 					<p class="more-info">siglo IV, Obispo de Constantinopla</p>
@@ -157,7 +158,8 @@
 			<h2 class="mt-4">Contenido</h2>
 			<div class="book-cover">
 				<img src="img\book-cover.jpg" alt="Portada del libro">
-				<p class="italic">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
+				<p class="italic">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude
+					Larchet.</p>
 			</div>
 			<div class="program text-left">
 				<ul>
@@ -223,9 +225,9 @@
 					<div class="primary col">
 						<div class="faq-card ">
 							<h3 class="faq-title">¿Quién organiza?</h3>
-							<p class="faq-description">Un grupo de aproximadamente 15 personas, principalmente jóvenes, que se reúnen los viernes en la noche para hacer
-								oración en la Parroquia de Nuestra Señora del Perpetuo Socorro, en Colima, México, bajo la dirección del párroco
-								y con permiso del Obispo.
+							<p class="faq-description">Un grupo de aproximadamente 15 personas, principalmente jóvenes, que se reúnen los viernes
+								en la noche para hacer oración en la Parroquia de Nuestra Señora del Perpetuo Socorro, en Colima, México, bajo la
+								dirección del párroco y con permiso del Obispo.
 							</p>
 							<p class="faq-description"> Apoyan también sacerdotes de la Diócesis de Colima.</p>
 						</div>
@@ -235,22 +237,22 @@
 						</div>
 						<div class="faq-card ">
 							<h3 class="faq-title">¿Cuál es el costo?</h3>
-							<p class="faq-description">La contribución personal es de 750 a 950 pesos según las posibilidades de cada quien. A partir de 750 usted ayuda
-								a que asistan personas con menos recursos económicos.
+							<p class="faq-description">La contribución personal es de 750 a 950 pesos según las posibilidades de cada quien. A
+								partir de 750 usted ayuda a que asistan personas con menos recursos económicos.
 							</p>
-							<p class="faq-description">Con esto se cubre hospedaje por persona en habitación doble (2 camas individuales) con baño, los alimentos de la cena
-								del viernes a la comida del domingo.</p>
+							<p class="faq-description">Con esto se cubre hospedaje por persona en habitación doble (2 camas individuales) con
+								baño, los alimentos de la cena del viernes a la comida del domingo.</p>
 						</div>
 						<div class="faq-card ">
 							<h3 class="faq-title">¿Tendré que hablar en público?</h3>
-							<p class="faq-description">No. El retiro es un curso informativo en el que no hay terapias ni personales ni de grupo. Sin embargo, las personas
-								que espontáneamente deseen hacer preguntas o compartir algo breve lo pueden hacer.</p>
+							<p class="faq-description">No. El retiro es un curso informativo en el que no hay terapias ni personales ni de grupo.
+								Sin embargo, las personas que espontáneamente deseen hacer preguntas o compartir algo breve lo pueden hacer.</p>
 						</div>
 						<div class="faq-card ">
 							<h3 class="faq-title">¿A quién va dirigido?</h3>
-							<p class="faq-description">Para todas las personas mayores de 18 años que les interese reflexionar sobre la salud interior. Han ido también adolescentes
-								acompañados de sus padres. Los jóvenes a partir de 13 años son bienvenidos, sólo es necesario que vayan acompañados
-								de algún familiar adulto, de preferencia sus padres.</p>
+							<p class="faq-description">Para todas las personas mayores de 18 años que les interese reflexionar sobre la salud
+								interior. Han ido también adolescentes acompañados de sus padres. Los jóvenes a partir de 13 años son bienvenidos,
+								sólo es necesario que vayan acompañados de algún familiar adulto, de preferencia sus padres.</p>
 						</div>
 					</div>
 					<div class="secondary col">
@@ -290,19 +292,19 @@
 						</div>
 						<div class="faq-card ">
 							<h3 class="faq-title">¿Cuándo fue el primer retiro?</h3>
-							<p class="faq-description">El primer retiro se realizó del 10 al 12 de octubre del 2008. Participaron 93 personas. En esa fecha conmemoramos
-								un año de la participación de 8 muchachos del grupo en un encuntro latinoamericano de jóvenes en Cochabamba, Bolivia,
-								organizado por la comunidad de Taizé. Se han hecho, desde entonces, 19 retiros con la participación de más de 700
-								personas.
+							<p class="faq-description">El primer retiro se realizó del 10 al 12 de octubre del 2008. Participaron 93 personas.
+								En esa fecha conmemoramos un año de la participación de 8 muchachos del grupo en un encuntro latinoamericano de jóvenes
+								en Cochabamba, Bolivia, organizado por la comunidad de Taizé. Se han hecho, desde entonces, 19 retiros con la participación
+								de más de 700 personas.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="container pull-left text-left pl-0 pb-5">
 					<div class="quote">
-						<p>"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres,
-							es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar
-							un gozo."</p>
+						<p>"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos
+							o tres, es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos,
+							puede irradiar un gozo."</p>
 						<div class="quote-by pull-right pb-3">
 							<p>- fr. Roger de Taizé</p>
 						</div>
