serve resources from a consistent URL

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						para compartir en pequeños grupos.</p>
 				</div>
 				<div class="col-lg-4">
-					<a href="img\oracion.jpg"><img class="circle mb-4" width="140" height="140" src="img\oracion_140.jpg"></a>
+					<a href="img\pictures\galeria28.jpg"><img class="circle mb-4" width="140" height="140" src="img\oracion_140.jpg"></a>
 					<h3>Oración común</h3>
 					<p class="text-left pt-3">El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se
 						reza en torno al icono de la
