--- a/welcomeEmail.html
+++ b/welcomeEmail.html
@@ -91,8 +91,8 @@
 
         .button-td:hover,
         .button-a:hover {
-            background: #555555 !important;
-            border-color: #555555 !important;
+            background: #1b6533 !important;
+            border-color: #1b6533 !important;
         }
 
         /* Media Queries */
@@ -146,13 +146,11 @@
 
 </head>
 
-<body width="100%" bgcolor="#DDDDDD" style="Margin: 0;">
-    <center style="width: 100%; background:#818286>
+<body width="100%" bgcolor="#222222" style="Margin: 0;">
+    <center style="width: 100%; background:#222222;">
 
         <!-- Visually Hidden Preheader Text : BEGIN -->
-        <div style="
-        display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family:
-        sans-serif;">
+        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family:sans-serif;">
         </div>
         <!-- Visually Hidden Preheader Text : END -->
 
@@ -173,8 +171,8 @@
                 <!-- Hero Image, Flush : BEGIN -->
                 <tr>
                     <td>
-                        <img src="img\pictures\casa.jpg" width="680" height="" alt="Suchitlan, Colima, Mexico" border="0"
-                            align="center" style="width: 100%; max-width: 680px;">
+                        <img src="https://s3-us-west-1.amazonaws.com/quetualmaviva.mx/img/pictures/casa.JPG" width="680"
+                            height="" alt="Suchitlan, Colima, Mexico" border="0" align="center" style="width: 100%; max-width: 680px;">
                     </td>
                 </tr>
                 <!-- Hero Image, Flush : END -->
@@ -198,9 +196,9 @@
                                     <!-- Button : Begin -->
                                     <table cellspacing="0" cellpadding="0" border="0" align="center" style="Margin: auto">
                                         <tr>
-                                            <td style="border-radius: 3px; background: #4084c4; text-align: center;"
+                                            <td style="border-radius: 3px; background: #27914a; text-align: center;"
                                                 class="button-td">
-                                                <a href="https://goo.gl/maps/1V9wQzkMAnL2" style="background: #4084c4; border: 15px solid #4084c4; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;"
+                                                <a href="http://www.quetualmaviva.mx" style="background: #27914a; border: 15px solid #27914a; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;"
                                                     class="button-a">
                                                     &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:#ffffff">Ir a
                                                         quetualmaviva.mx</span>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -221,7 +219,7 @@
             <table cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px;">
                 <tr>
                     <td style="padding: 40px 10px;width: 100%;font-size: 12px; font-family: sans-serif; mso-height-rule: exactly; line-height:18px; text-align: center; color: #888888;">
-                        ¿No puedes ver bien el correo? <webversion style="color:#333333; text-decoration:underline; font-weight: bold;">Clic
+                        ¿No puedes ver bien el correo? <webversion style="color:#888888; text-decoration:underline; font-weight: bold;">Clic
                             aquí</webversion>
                         <br><br>
                         Parroquia N.S del Perpetuo Socorro<br><span class="mobile-link--footer">Belisario Dominguez 336</span><br><span
