--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<header class="main-header text-center">
 		<span> </span>
 		<h1>Terapéutica de las Enfermedades Espirituales</h1>
-		<h2 class="pb-0">13-15 Julio 2018</h2>
+		<h2 class="pb-0">Próxima fecha por definir</h2>
 		<h3>Suchitlán, Colima</h3>
 	</header>
 	<div class="main-content text-center">
