--- a/index.html
+++ b/index.html
@@ -198,7 +198,12 @@
               Recibe noticias en tu email
             </h2>
             <p>Te enviaremos ocasionalmente sólo avisos importantes.</p>
-            <form id="signupForm" class="inline-form mt-4 pt-2" method="post">
+            <form
+              id="signupForm"
+              action="/.netlify/functions/hello"
+              class="inline-form mt-4 pt-2"
+              method="post"
+            >
               <i
                 class="fa fa-envelope-o fa-1-5x o-4"
                 aria-hidden="true"
