--- a/index.html
+++ b/index.html
@@ -198,12 +198,7 @@
               Recibe noticias en tu email
             </h2>
             <p>Te enviaremos ocasionalmente sólo avisos importantes.</p>
-            <form
-              id="signupForm"
-              class="inline-form mt-4 pt-2"
-              method="post"
-              data-netlify="true"
-            >
+            <form id="signupForm" class="inline-form mt-4 pt-2" method="post">
               <i
                 class="fa fa-envelope-o fa-1-5x o-4"
                 aria-hidden="true"
@@ -444,7 +439,12 @@
       <div class="background-dark divider pt-5 pb-4">
         <div class="container">
           <h2 style="font-weight:600">¡Aparta tu lugar!</h2>
-          <form id="registerForm" class="splash-form" method="post">
+          <form
+            id="registerForm"
+            class="splash-form"
+            method="post"
+            data-netlify="true"
+          >
             <p>
               <label for="name">Nombre*</label>
               <input
