--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
               <div class="faq-card ">
                 <h3 class="faq-title">¿Cuál es el costo?</h3>
                 <p class="faq-description">
-                  La contribución personal es de 750 a 950 pesos según las
-                  posibilidades de cada quien. A partir de 750 usted ayuda a que
-                  asistan personas con menos recursos económicos.
+                  La contribución personal es de 1000 a 1200 pesos según las
+                  posibilidades de cada quien. A partir de 1000 usted ayuda a
+                  que asistan personas con menos recursos económicos.
                 </p>
                 <p class="faq-description">
                   Con esto se cubre hospedaje por persona en habitación doble (2
